# memoapp

./: .editorconfig  .gitignore  .ycm_extra_conf.py  Makefile  README.adoc  README.md  memoapp.py  memoapp.ui  meson.build  org.gtk.memoapp.json  pylintrc
data/: meson.build  org.gtk.memoapp.appdata.xml.in  org.gtk.memoapp.desktop.in  org.gtk.memoapp.gschema.xml
md-samples/: file1.md
po/: POTFILES  meson.build
src/: main.c  memoapp-projects.c  memoapp-projects.h  memoapp-setup.c  memoapp-setup.h  memoapp-window.c  memoapp-window.h  memoapp-window.ui  memoapp-window.ui.bkp  memoapp.c  memoapp.gresource.xml  memoapp.h  meson.build  ui-resources.c
src/ui/: memoapp-menubar.ui  memoapp-projects.ui  memoapp-window.ui  memoapp.gresource.xml
